--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,9 @@
 {
-  deps, [
-    {jsx, "2.8.0"},
-    {uuid, "1.5.2-rc1", {pkg, uuid_erl}},
-    {qdate, "0.4.3"},
-    {lager, "2.1.1"}
+  deps,
+  [
+    {jsx,   {git, "https://github.com/talentdeficit/jsx.git",     {tag, "v2.9.0"}}},
+    {uuid,  {git, "https://github.com/okeuday/uuid.git",          {tag, "v1.7.4"}}},
+    {qdate, {git, "https://github.com/vkletsko/qdate.git",        "master"}},
+    {lager, {git, "https://github.com/erlang-lager/lager.git",    {tag, "2.1.1"}}}
   ]
 }.
