--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
   [
     {jsx,   {git, "https://github.com/talentdeficit/jsx.git",     {tag, "v2.9.0"}}},
     {uuid,  {git, "https://github.com/okeuday/uuid.git",          {tag, "v1.7.4"}}},
-    {qdate, {git, "https://github.com/vkletsko/qdate.git",        "master"}},
+    {qdate, {git, "https://github.com/vkletsko/qdate.git",        "head"}},
     {lager, {git, "https://github.com/erlang-lager/lager.git",    {tag, "2.1.1"}}}
   ]
 }.
